articles visibility fixed

--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,30 +1,29 @@
+.ArticleList {
+	width: 100%;
+	height: 100%;
+	//overflow-y: auto;
+	//margin-left: 40px;
+}
 
 .BIG {
-    .card {
-        margin-bottom: 10px;
-    }
+	.card {
+		margin-bottom: 10px;
+	}
 }
 
 .SMALL {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 30px;
 }
 
 .itemContainer {
     gap: 0.5rem;
     height: 100%;
-    width: 100px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-content: stretch;
     box-sizing: border-box;
 
-    @media (max-width: 1024px) {
-        width: 50%;
-    }
-
-    @media (max-width: 300px) {
-        width: 100%;
-    }
 }
